# MyLanguage

./: .gitignore  Cargo.toml  README.md
covibe_ast/: Cargo.toml
covibe_ast/src/: decl.rs  expr.rs  lib.rs  literal.rs  op.rs  pat.rs  stmt.rs  ty.rs  visitor.rs
covibe_codegen/: Cargo.toml
covibe_codegen/src/: lib.rs
covibe_driver/: Cargo.toml
covibe_driver/src/: lib.rs
covibe_formatter/: Cargo.toml
covibe_formatter/src/: lib.rs
covibe_lexer/: Cargo.toml
covibe_lexer/src/: lexer.rs  lib.rs  token.rs
covibe_linter/: Cargo.toml
covibe_linter/src/: lib.rs
covibe_lsp/: Cargo.toml
covibe_lsp/src/: lib.rs
covibe_mir/: Cargo.toml
covibe_mir/src/: lib.rs
covibe_package/: Cargo.toml
covibe_package/src/: lib.rs
covibe_parser/: Cargo.toml  PART11_STATUS.md
covibe_parser/src/: error.rs  expr.rs  lib.rs  stmt.rs
covibe_repl/: Cargo.toml
covibe_repl/src/: lib.rs
covibe_runtime/: Cargo.toml
covibe_runtime/src/: lib.rs
covibe_semantic/: Cargo.toml
covibe_semantic/src/: lib.rs
covibe_stdlib/: Cargo.toml
covibe_stdlib/src/: lib.rs
covibe_util/: Cargo.toml
covibe_util/src/: diagnostic.rs  interner.rs  lib.rs  source.rs  span.rs
spec/: 01-lexical-structure.md  02-control-flow-functions-patterns.md  03-type-system.md  04-memory-model-ownership.md  05-concurrency-model.md  06-modules-errors-interop-stdlib.md
